<resources>
    <string name="app_name">ItunesRemake</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_in_title">Sign In</string>
    <string name="name_text_placeholder">Name</string>
    <string name="email_text_placeholder" translatable="false">Email</string>
    <string name="password_text_placeholder" translatable="false">Password</string>
    <string name="sign_up_button">Sign up</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_in_text">Already have an account ?</string>
    <string name="sign_up_text">Don\'t have an account ?</string>
    <string name="click_here_text">Click here</string>
    <string name="search_button">Search</string>
    <string name="search_tittle">Search</string>
    <string name="favorite_title">Favorites</string>
    <string name="settings_title">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
